--- a/service-registry/Dockerfile
+++ b/service-registry/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17.0.1-jdk-slim
-MAINTAINER damien.tschan@cddf.ch
+MAINTAINER seb.chevre@gmail.com
 COPY target/service-registry.jar service-registry.jar
 ENTRYPOINT ["java","-jar","/service-registry.jar"]
