--- a/service-registry/src/main/resources/application.properties
+++ b/service-registry/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=${SERVER_PORT:8761}
 spring.application.name=service-registry
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=false
+
+logging.level.com.netflix.eureka=OFF
+logging.level.com.netflix.discovery=OFF
