--- a/services/users-service/src/main/resources/application.properties
+++ b/services/users-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=users-service
+server.port=${SERVER_PORT:8082}
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+
+#LDAP config
+spring.ldap.urls=${LDAP_URI:ldap://localhost:389}
+spring.ldap.base=dc=he-arc,dc=ch
+spring.ldap.username=cn=admin,dc=he-arc,dc=ch
+spring.ldap.password=passw0rd
